# internal/handler/request/auth.go
@@ -1,0 +1,6 @@
+package request
+
+type AuthRequest struct {
+	Email    string `json:"email" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
